@@ -51,7 +51,7 @@ endif
 
 DEPENDENCIES            = $(UNIQ_DEPENDENCIES)
 
-ARTIFACT_BIN            = $($(ARTIFACT_ID)_BIN)
+ARTIFACT_BIN            = $($(HOST)$(ARTIFACT_ID)_BIN)
 ARTIFACT_NAME           = $($(ARTIFACT_ID)_NAME)
 ARTIFACT_OBJ_META       = $(ARTIFACT_BIN)/$($(ARTIFACT_ID)_NAME)-meta.o
 ARTIFACT_OBJ_DSP        = $(ARTIFACT_BIN)/$($(ARTIFACT_ID)_NAME)-dsp.o
